--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <h1>st33d's Bitsy games compatible for the 3DS!</h1>
   <p>for people that like to play Roomba Quest</p>
   <br>
-  <a href="roomba_quest_1.html">Roomba Quest (1)</a>
+  <a href="rq_1.html">Roomba Quest (1)</a>
 </body>
 </html>
